# image2caption

./: .gitignore  README.md  main.py  pyproject.toml
config/: dataset.yaml  model.yaml  train.yaml
docs/: Encoderの評価.md  Encoderの評価指標として不適切なもの.md  Trainerの実装.md  memo.md  pytorchのモデルがout_inで重みを管理する理由.md  question.md  クロスエントロピー誤差の使い方.md  検証用データセットの役割.md  設計.md
notebooks/: batch_processing.ipynb  data_split.ipynb  image_processing.ipynb  lab.py  loss.ipynb  model_lab.ipynb  torch_lab.ipynb  yaml_lab.ipynb
src/dataset/: build.py  flickr8k.py  split.py  transforms.py
src/models/: model.py
src/training/: loss.py  main.py  trainer.py
src/utils/: data.py  device.py  metrics.py  show_data.py
