[project]
name = "image2caption"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.4.0",
    "astunparse>=1.6.3",
    "certifi>=2026.2.25",
    "charset-normalizer>=3.4.6",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "flatbuffers>=25.12.19",
    "fonttools>=4.62.1",
    "gast>=0.7.0",
    "google-pasta>=0.2.0",
    "grpcio>=1.78.0",
    "h5py>=3.16.0",
    "idna>=3.11",
    "japanize-matplotlib>=1.1.3",
    "joblib>=1.5.3",
    "keras>=3.13.2",
    "kiwisolver>=1.5.0",
    "libclang>=18.1.1",
    "markdown>=3.10.2",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.3",
    "matplotlib>=3.10.8",
    "mdurl>=0.1.2",
    "ml-dtypes>=0.5.4",
    "mpmath>=1.3.0",
    "namex>=0.1.0",
    "numpy>=2.4.3",
    "opt-einsum>=3.4.0",
    "optree>=0.19.0",
    "packaging>=26.0",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "protobuf>=7.34.1",
    "pygments>=2.19.2",
    "pyparsing>=3.3.2",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2026.1.post1",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "six>=1.17.0",
    "sympy>=1.14.0",
    "termcolor>=3.3.0",
    "threadpoolctl>=3.6.0",
    "typing-extensions>=4.15.0",
    "tzdata>=2025.3",
    "urllib3>=2.6.3",
    "werkzeug>=3.1.6",
    "wrapt>=2.1.2",
]
